update to typescript, change config, game base code.

--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -53,7 +53,7 @@
   text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.4);
 }
 
-.header-text {
+.headerText {
   margin-left: 10px;
   margin-right: 20px;
   margin-bottom: 10px;
