--- a/src/styles/Countdown.css
+++ b/src/styles/Countdown.css
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: center;
   font-weight: 700;
-  font-size: 1.25rem;
+  font-size: 30px;
   line-height: 1.75rem;
   padding: 0.5rem;
   border: 1px solid #000;
@@ -36,7 +36,7 @@
 }
 
 .show-counter .countdown {
-  line-height: 1.25rem;
+  line-height: 30px;
   padding: 0 0.75rem 0 0.75rem;
   align-items: center;
   display: flex;
