add Game changes to when user select

--- a/src/styles/Game.less
+++ b/src/styles/Game.less
@@ -44,6 +44,35 @@
   font-weight: 700;
 }
 
+.selectedButton {
+  border-radius: 25px;
+  background-color: green;
+  /* padding-left: vw; */
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  width: 100%;
+  height: 25vh;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.changeButton {
+  .randomColor();
+  border-radius: 25px;
+  background-color: @color;
+  /* padding-left: vw; */
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  width: 100%;
+  height: 15vh;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
 .title {
   font-size: 30px;
 }
