--- a/src/styles/Game.less
+++ b/src/styles/Game.less
@@ -46,6 +46,20 @@
 
 .selectedButton {
   border-radius: 25px;
+  background-color: white;
+  /* padding-left: vw; */
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+  width: 100%;
+  height: 25vh;
+  color: black;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.winButton {
+  border-radius: 25px;
   background-color: green;
   /* padding-left: vw; */
   text-align: center;
@@ -53,7 +67,7 @@
   font-size: 30px;
   width: 100%;
   height: 25vh;
-  color: white;
+  color: black;
   text-transform: uppercase;
   font-weight: 700;
 }
